# ── pyproject.toml ───────────────────────────────────────────────────────
[build-system]
requires = [
    "setuptools>=71",   # must be ≥71 to support PEP 660 editable builds
        "wheel"
        ]
        build-backend = "setuptools.build_meta"

# Project metadata – all keys appear **once** only.
[project]
name = "itikz"
version = "0.1.7"
description = "Cell magic for PGF/TikZ-to-SVG rendering in Jupyter"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}          # SPDX‑compatible expression (single definition)
authors = [{name = "John Bjorn Nelson", email = "jbn@abreka.com"}]
keywords = ["itikz", "jupyter", "tikz", "svg"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
            "License :: OSI Approved :: MIT License",
                "Programming Language :: Python :: 3",
                    "Programming Language :: Python :: 3 :: Only"
                    ]

# Optional runtime dependencies (empty list if none)
dependencies = []

# Optional development/test dependencies – also appear only once.
[project.optional-dependencies]
dev = [
    "pytest",
        "pytest-runner"
        ]
# ────────────────────────────────────────────────────────────────────────
